feat: 文件夹功能优化6项
1. 面包屑路径改为"文件夹/项目文档/启动材料"格式
2. 点击"文件夹"标题进入文件夹管理页面
3. +号直接弹出新建文件夹弹窗，增加全部折叠按钮
4. 删除文件夹时文档移至上级文件夹而非根目录
5. 文件夹图标改为填充式SVG，更醒目美观
6. 翻页组件固定在页面底部

Co-Authored-By: Claude <noreply@anthropic.com>